# notebooks

./: .pre-commit-config.yaml  Makefile  README.md  convert.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  style.yml
holocron/: classification_training.ipynb  hf_hub.ipynb  quicktour.ipynb
torch-cam/: README.md  latency_benchmark.ipynb  performance_benchmark.ipynb  quicktour.ipynb  rst-files.txt
